gipsy-src/src/gipsy/GIPC/intensional/GIPL/GIPLParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. GIPLParser.java */
package gipsy.GIPC.intensional.GIPL;

import gipsy.GIPC.intensional.SimpleNode;
import gipsy.GIPC.util.Node;
import gipsy.GIPC.util.ParseException;
import gipsy.GIPC.util.SimpleCharStream;
import gipsy.GIPC.util.Token;
import gipsy.GIPC.util.TokenMgrError;
import gipsy.interfaces.AbstractSyntaxTree;


/**
 * Does syntactic anlysis, outputs an AST.
 * Generated by JavaCC automatically.
 *
 * $Id: GIPLParser.java,v 1.17 2007/11/02 21:59:41 aihua_wu Exp $
 *
 * @author Chun Lei Ren
 * @author Serguei Mokhov
 *
 * @see GIPLParserTreeConstants Provides the constants definition for an AST.
 * @see GIPLParserConstants     Provides the constants definition for parser.
 */
public class GIPLParser/*@bgen(jjtree)*/implements GIPLParserTreeConstants, GIPLParserConstants {/*@bgen(jjtree)*/
  protected JJTGIPLParserState jjtree = new JJTGIPLParserState();/**
	 * Error count.
	 */
        private int iErrorCount = 0;

        /**
	 * Retrieves number of parse erros.
	 * @return abstract syntax tree if parse was successful; null otherwise.
	 */
        public AbstractSyntaxTree parse()
        {
                try
                {
                        // startParse() is the start state
                        SimpleNode oRoot = startParse();
                        //System.err.println("GIPL Parser, $Revision: 1.17 $: " + this.iErrorCount + " errors.");
                        return new AbstractSyntaxTree(oRoot);
                }
                catch(ParseException e)
                {
                        System.err.println(e);
                        e.printStackTrace(System.err);
                        return null;
                }
        }

        /**
	 * Retrieves number of parse erros.
	 * @return error count
	 */
        public int getErrorCount()
        {
                return this.iErrorCount;
        }

  void countErrors() throws ParseException {
        this.iErrorCount++;
  }

/**
 * We start parsing GIPL here.
 */
  final public SimpleNode startParse() throws ParseException {
                                  /*@bgen(jjtree) START */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        E();
        jj_consume_token(0);
                        {if (true) return jjtn000;}
      } catch (ParseException e) {
                countErrors();
                System.err.println(e.toString());
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

/**
 * E().
 */
  final public void E() throws ParseException {
    try {
      if (jj_2_3(5)) {
              SimpleNode jjtn001 = new SimpleNode(JJTIF);
              boolean jjtc001 = true;
              jjtree.openNodeScope(jjtn001);
        try {
          jj_consume_token(IF);
          E();
          jj_consume_token(THEN);
          E();
          jj_consume_token(ELSE);
          E();
          jj_consume_token(FI);
        } catch (Throwable jjte001) {
              if (jjtc001) {
                jjtree.clearNodeScope(jjtn001);
                jjtc001 = false;
              } else {
                jjtree.popNode();
              }
              if (jjte001 instanceof RuntimeException) {
                {if (true) throw (RuntimeException)jjte001;}
              }
              if (jjte001 instanceof ParseException) {
                {if (true) throw (ParseException)jjte001;}
              }
              {if (true) throw (Error)jjte001;}
        } finally {
              if (jjtc001) {
                jjtree.closeNodeScope(jjtn001, true);
              }
        }
        E1();
      } else if (jj_2_4(5)) {
                SimpleNode jjtn002 = new SimpleNode(JJTHASH);
                boolean jjtc002 = true;
                jjtree.openNodeScope(jjtn002);
        try {
          jj_consume_token(HASH);
          jj_consume_token(DOT);
          E();
        } catch (Throwable jjte002) {
                if (jjtc002) {
                  jjtree.clearNodeScope(jjtn002);
                  jjtc002 = false;
                } else {
                  jjtree.popNode();
                }
                if (jjte002 instanceof RuntimeException) {
                  {if (true) throw (RuntimeException)jjte002;}
                }
                if (jjte002 instanceof ParseException) {
                  {if (true) throw (ParseException)jjte002;}
                }
                {if (true) throw (Error)jjte002;}
        } finally {
                if (jjtc002) {
                  jjtree.closeNodeScope(jjtn002, true);
                }
        }
        E1();
      } else if (jj_2_5(5)) {
        term();
        E1();
      } else if (jj_2_6(5)) {
        if (jj_2_1(5)) {
                    SimpleNode jjtn003 = new SimpleNode(JJTPOSI);
                    boolean jjtc003 = true;
                    jjtree.openNodeScope(jjtn003);
          try {
            jj_consume_token(PLUS);
          } finally {
                    if (jjtc003) {
                      jjtree.closeNodeScope(jjtn003, true);
                    }
          }
        } else if (jj_2_2(5)) {
                                   SimpleNode jjtn004 = new SimpleNode(JJTNEGE);
                                   boolean jjtc004 = true;
                                   jjtree.openNodeScope(jjtn004);
          try {
            jj_consume_token(MINUS);
          } finally {
                                   if (jjtc004) {
                                     jjtree.closeNodeScope(jjtn004, true);
                                   }
          }
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        term();
                                Node midNode1 = jjtree.popNode(); // Term
                        Node midNode2 = jjtree.popNode(); // Sign
                                midNode1.jjtSetParent(midNode2);
                                midNode2.jjtAddChild(midNode1, 0);
                                jjtree.pushNode(midNode2);
        E1();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException e) {
                countErrors();
                System.err.println(e.toString());
    }
  }

/**
 * E1().
 */
  final public void E1() throws ParseException {
    try {
      if (jj_2_21(5)) {
        if (jj_2_16(5)) {
          if (jj_2_7(5)) {
                              SimpleNode jjtn001 = new SimpleNode(JJTADD);
                              boolean jjtc001 = true;
                              jjtree.openNodeScope(jjtn001);
            try {
              jj_consume_token(PLUS);
            } finally {
                              if (jjtc001) {
                                jjtree.closeNodeScope(jjtn001, true);
                              }
            }
          } else if (jj_2_8(5)) {
                                            SimpleNode jjtn002 = new SimpleNode(JJTMIN);
                                            boolean jjtc002 = true;
                                            jjtree.openNodeScope(jjtn002);
            try {
              jj_consume_token(MINUS);
            } finally {
                                            if (jjtc002) {
                                              jjtree.closeNodeScope(jjtn002, true);
                                            }
            }
          } else if (jj_2_9(5)) {
                                                           SimpleNode jjtn003 = new SimpleNode(JJTOR);
                                                           boolean jjtc003 = true;
                                                           jjtree.openNodeScope(jjtn003);
            try {
              jj_consume_token(OR);
            } finally {
                                                           if (jjtc003) {
                                                             jjtree.closeNodeScope(jjtn003, true);
                                                           }
            }
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
          term();
                                Node midNode1 = jjtree.popNode(); // right
                        Node oAddNode = jjtree.popNode(); // AddOp
                                Node midNode3 = jjtree.popNode(); // left
                                midNode1.jjtSetParent(oAddNode);
                                midNode3.jjtSetParent(oAddNode);
                                oAddNode.jjtAddChild(midNode3, 0);
                                oAddNode.jjtAddChild(midNode1, 1);
                                jjtree.pushNode(oAddNode);
          E1();
        } else if (jj_2_17(5)) {
          if (jj_2_10(5)) {
                                SimpleNode jjtn004 = new SimpleNode(JJTLT);
                                boolean jjtc004 = true;
                                jjtree.openNodeScope(jjtn004);
            try {
              jj_consume_token(LT);
            } finally {
                                if (jjtc004) {
                                  jjtree.closeNodeScope(jjtn004, true);
                                }
            }
          } else if (jj_2_11(5)) {
                                           SimpleNode jjtn005 = new SimpleNode(JJTGT);
                                           boolean jjtc005 = true;
                                           jjtree.openNodeScope(jjtn005);
            try {
              jj_consume_token(GT);
            } finally {
                                           if (jjtc005) {
                                             jjtree.closeNodeScope(jjtn005, true);
                                           }
            }
          } else if (jj_2_12(5)) {
                                                      SimpleNode jjtn006 = new SimpleNode(JJTGE);
                                                      boolean jjtc006 = true;
                                                      jjtree.openNodeScope(jjtn006);
            try {
              jj_consume_token(GE);
            } finally {
                                                      if (jjtc006) {
                                                        jjtree.closeNodeScope(jjtn006, true);
                                                      }
            }
          } else if (jj_2_13(5)) {
                                                                 SimpleNode jjtn007 = new SimpleNode(JJTLE);
                                                                 boolean jjtc007 = true;
                                                                 jjtree.openNodeScope(jjtn007);
            try {
              jj_consume_token(LE);
            } finally {
                                                                 if (jjtc007) {
                                                                   jjtree.closeNodeScope(jjtn007, true);
                                                                 }
            }
          } else if (jj_2_14(5)) {
                                                                            SimpleNode jjtn008 = new SimpleNode(JJTEQ);
                                                                            boolean jjtc008 = true;
                                                                            jjtree.openNodeScope(jjtn008);
            try {
              jj_consume_token(EQ);
            } finally {
                                                                            if (jjtc008) {
                                                                              jjtree.closeNodeScope(jjtn008, true);
                                                                            }
            }
          } else if (jj_2_15(5)) {
                                                                                       SimpleNode jjtn009 = new SimpleNode(JJTNE);
                                                                                       boolean jjtc009 = true;
                                                                                       jjtree.openNodeScope(jjtn009);
            try {
              jj_consume_token(NE);
            } finally {
                                                                                       if (jjtc009) {
                                                                                         jjtree.closeNodeScope(jjtn009, true);
                                                                                       }
            }
          } else {
            jj_consume_token(-1);
            throw new ParseException();
          }
          E();
                                Node midNode1 = jjtree.popNode(); // right
                                Node midNode2 = jjtree.popNode(); // RelOp
                                Node midNode3 = jjtree.popNode(); // left
                                midNode1.jjtSetParent(midNode2);
                                midNode3.jjtSetParent(midNode2);
                                midNode2.jjtAddChild(midNode3, 0);
                                midNode2.jjtAddChild(midNode1, 1);
                                jjtree.pushNode(midNode2);
          E1();
        } else if (jj_2_18(5)) {
                              SimpleNode jjtn010 = new SimpleNode(JJTAT);
                              boolean jjtc010 = true;
                              jjtree.openNodeScope(jjtn010);
          try {
            jj_consume_token(AT);
          } finally {
                              if (jjtc010) {
                                jjtree.closeNodeScope(jjtn010, true);
                              }
          }
          jj_consume_token(DOT);
          E();
          E();
                                Node midNode1 = jjtree.popNode(); // right1
                                Node midNode2 = jjtree.popNode(); // right2
                                Node midNode3 = jjtree.popNode(); // AT
                                Node midNode4 = jjtree.popNode(); // left
                                midNode1.jjtSetParent(midNode3);
                                midNode2.jjtSetParent(midNode3);
                                midNode4.jjtSetParent(midNode3);
                                midNode3.jjtAddChild(midNode4, 0);
                                midNode3.jjtAddChild(midNode2, 1);
                                midNode3.jjtAddChild(midNode1, 2);
                                jjtree.pushNode(midNode3);
          E1();
        } else if (jj_2_19(5)) {
                              SimpleNode jjtn011 = new SimpleNode(JJTWHERE);
                              boolean jjtc011 = true;
                              jjtree.openNodeScope(jjtn011);
          try {
            jj_consume_token(WHERE);
          } finally {
                              if (jjtc011) {
                                jjtree.closeNodeScope(jjtn011, true);
                              }
          }
          Q();
          jj_consume_token(END);
                                Node midNode1 = jjtree.popNode(); // right
                                Node midNode2 = jjtree.popNode(); // WHERE
                                Node midNode3 = jjtree.popNode(); // left
                                midNode1.jjtSetParent(midNode2);
                                midNode3.jjtSetParent(midNode2);
                                midNode2.jjtAddChild(midNode3, 0);
                                midNode2.jjtAddChild(midNode1, 1);
                                jjtree.pushNode(midNode2);
          E1();
        } else if (jj_2_20(5)) {
          Tail();
          E1();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else {
        ;
      }
    } catch (ParseException e) {
                countErrors();
                System.err.println(e.toString());
    }
  }

/**
 * This Tail and the QTail later are not to be considered so far.
 */
  final public void Tail() throws ParseException {
    try {
      jj_consume_token(LBRACKET);
      E();
      label_1:
      while (true) {
        if (jj_2_22(5)) {
          ;
        } else {
          break label_1;
        }
        jj_consume_token(COMMA);
        E();
      }
      jj_consume_token(RBRACKET);
      jj_consume_token(LPAREN);
      E();
      label_2:
      while (true) {
        if (jj_2_23(5)) {
          ;
        } else {
          break label_2;
        }
        jj_consume_token(COMMA);
        E();
      }
      jj_consume_token(RPAREN);
    } catch (ParseException e) {
                countErrors();
                System.err.println(e.toString());
    }
  }

  final public void term() throws ParseException {
    factor();
    if (jj_2_24(5)) {
      multTerm();
    } else {
      ;
    }
  }

  final public void multTerm() throws ParseException {
    if (jj_2_25(5)) {
              SimpleNode jjtn001 = new SimpleNode(JJTTIMES);
              boolean jjtc001 = true;
              jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(TIMES);
      } finally {
              if (jjtc001) {
                jjtree.closeNodeScope(jjtn001, true);
              }
      }
    } else if (jj_2_26(5)) {
                               SimpleNode jjtn002 = new SimpleNode(JJTDIV);
                               boolean jjtc002 = true;
                               jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(DIV);
      } finally {
                               if (jjtc002) {
                                 jjtree.closeNodeScope(jjtn002, true);
                               }
      }
    } else if (jj_2_27(5)) {
                                            SimpleNode jjtn003 = new SimpleNode(JJTMOD);
                                            boolean jjtc003 = true;
                                            jjtree.openNodeScope(jjtn003);
      try {
        jj_consume_token(MOD);
      } finally {
                                            if (jjtc003) {
                                              jjtree.closeNodeScope(jjtn003, true);
                                            }
      }
    } else if (jj_2_28(5)) {
                                                         SimpleNode jjtn004 = new SimpleNode(JJTAND);
                                                         boolean jjtc004 = true;
                                                         jjtree.openNodeScope(jjtn004);
      try {
        jj_consume_token(AND);
      } finally {
                                                         if (jjtc004) {
                                                           jjtree.closeNodeScope(jjtn004, true);
                                                         }
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    term();
                Node midNode1 = jjtree.popNode(); // right
                Node midNode2 = jjtree.popNode(); // MultOp
                Node midNode3 = jjtree.popNode(); // left
                midNode1.jjtSetParent(midNode2);
                midNode3.jjtSetParent(midNode2);
                midNode2.jjtAddChild(midNode3, 0);
                midNode2.jjtAddChild(midNode1, 1);
                jjtree.pushNode(midNode2);
    multTerm();
  }

  final public void factor() throws ParseException {
    if (jj_2_29(5)) {
      ID();
    } else if (jj_2_30(5)) {
      CONST();
    } else if (jj_2_31(5)) {
      jj_consume_token(LPAREN);
      E();
      jj_consume_token(RPAREN);
    } else if (jj_2_32(5)) {
            SimpleNode jjtn001 = new SimpleNode(JJTNOT);
            boolean jjtc001 = true;
            jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(NOT);
        jj_consume_token(LPAREN);
        E();
        jj_consume_token(RPAREN);
      } catch (Throwable jjte001) {
            if (jjtc001) {
              jjtree.clearNodeScope(jjtn001);
              jjtc001 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte001 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte001;}
            }
            if (jjte001 instanceof ParseException) {
              {if (true) throw (ParseException)jjte001;}
            }
            {if (true) throw (Error)jjte001;}
      } finally {
            if (jjtc001) {
              jjtree.closeNodeScope(jjtn001, true);
            }
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }
